# stock-advisor

./: .gitignore  COMPARISON_ANALYSIS.md  DEVLOG.md  README.md  ROADMAP.md  ask_gemini_design.py  requirements.txt  test_scoring.py
config/: config.yaml
deploy/: deploy.sh  stock-advisor.service
python/: backtest_buyhold.py  backtest_detailed.py  backtest_global.py  backtest_smart.py  export_AV_Linxea_Spirit.json  export_Mon_CTO_Degiro.json  export_Mon_PEA_Boursorama.json  pytest.ini  test_all_features.py  test_full_workflow.py
python/.streamlit/: config.toml
python/src/alerts/: __init__.py  manager.py
python/src/analysis/: ai_advisor.py  benchmark.py  comprehensive.py  etf_analyzer.py  fundamental.py  moning_scores.py  projections.py  scorer.py  technical.py  valuation.py
python/src/api/: main.py
python/src/backtest/: __init__.py  simulator.py
python/src/currency/: __init__.py  currency_manager.py
python/src/data/: __init__.py  stock_universe.py
python/src/database/: models.py
python/src/filters/: base.py
python/src/goals/: __init__.py  savings_goals.py
python/src/hardware/: detector.py
python/src/import_export/: __init__.py  csv_importer.py
python/src/portfolio/: __init__.py  manager.py  (+2 more)
python/tests/: __init__.py  conftest.py  test_backtest.py  test_filters.py  test_fundamental.py  test_hardware.py  test_scorer.py  test_sentiment.py  test_smart_money.py  test_technical.py  test_yahoo_finance.py
python/ui/: app.py  pages_extended.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/parser/: mod.rs
rust/src/scraper/: finviz.rs  mod.rs
(+7 files in other folders)
